force-app/main/default/objects/Opportunity/fields/Free_Trial_Extension_Status__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_Extension_Status__c</fullName>
    <description>Status of a free trial extension</description>
    <label>Free Trial Extension Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>