force-app/main/default/objects/Opportunity/fields/Free_Trial_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Free_Trial_Purchase__c</fullName>
    <inlineHelpText>Use this field to indicate whether the customer is purchasing all units in the free trial, partial amounts, or none. Filling this out will help order ops process deals faster as we approach the end of the quarter!</inlineHelpText>
    <label>Free Trial Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Buy</fullName>
            </value>
            <value>
                <fullName>Partial Buy</fullName>
            </value>
            <value>
                <fullName>No Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>