force-app/main/default/objects/Opportunity/fields/Freight_Account__c.field-meta.xml
<CustomField>
    <fullName>Freight_Account__c</fullName>
    <defaultValue>&quot;00500&quot;</defaultValue>
    <label>Freight Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>