force-app/main/default/objects/Opportunity/fields/FT_Conversion_Netsuite_Id__c.field-meta.xml
<CustomField>
    <fullName>FT_Conversion_Netsuite_Id__c</fullName>
    <externalId>true</externalId>
    <label>FT Conversion Netsuite Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>