force-app/main/default/objects/Opportunity/fields/FT_Conversion_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>FT_Conversion_Serial_No__c</fullName>
    <inlineHelpText>Please enter this serial number customer is keeping for partial buy.</inlineHelpText>
    <label>FT Serial Numbers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>