force-app/main/default/objects/Opportunity/fields/FT_Return__c.field-meta.xml
<CustomField>
    <fullName>FT_Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Return Opportunity for Free Trial</description>
    <label>Trial Return Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Opportunity.Returning_Opportunity__r.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (FT Return)</relationshipLabel>
    <relationshipName>FTReturnOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>