force-app/main/default/objects/Opportunity/fields/GW_unit_count__c.field-meta.xml
<CustomField>
    <fullName>GW_unit_count__c</fullName>
    <label>GW unit count</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Copy__c</field>
        <operation>contains</operation>
        <value>HW-GW</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>