force-app/main/default/objects/Opportunity/fields/Hardware_Sales_Tax_CPQ__c.field-meta.xml
<CustomField>
    <fullName>Hardware_Sales_Tax_CPQ__c</fullName>
    <description>Hardware Sales Tax from CPQ &lt; temporary solution &gt;</description>
    <label>Hardware Sales Tax (CPQ)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>