force-app/main/default/objects/Opportunity/fields/Hashtag__c.field-meta.xml
<CustomField>
    <fullName>Hashtag__c</fullName>
    <label>Opportunity Hashtag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>