force-app/main/default/objects/Opportunity/fields/Historical_Amount__c.field-meta.xml
<CustomField>
    <fullName>Historical_Amount__c</fullName>
    <label>Amount When Closed Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>