force-app/main/default/objects/Opportunity/fields/Historical_Commissionable_Dollars_ACV__c.field-meta.xml
<CustomField>
    <fullName>Historical_Commissionable_Dollars_ACV__c</fullName>
    <label>Historical Commissionable Dollars ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>