force-app/main/default/objects/Opportunity/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <description>GTMS -38 Update the Sales Error drop down button</description>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Quantities</fullName>
            </value>
            <value>
                <fullName>Missing / Wrong Shipping Address</fullName>
            </value>
            <value>
                <fullName>No PM approval</fullName>
            </value>
            <value>
                <fullName>Out of stock</fullName>
            </value>
            <value>
                <fullName>Confirming FT</fullName>
            </value>
            <value>
                <fullName>Inventory Hold</fullName>
            </value>
            <value>
                <fullName>Clarification Hold</fullName>
            </value>
            <value>
                <fullName>Requested Later Ship Date</fullName>
            </value>
            <value>
                <fullName>Special Shipping Request Hold</fullName>
            </value>
            <value>
                <fullName>Partial Shipment</fullName>
            </value>
            <value>
                <fullName>RFO Notes</fullName>
            </value>
            <value>
                <fullName>Return Kickback: Promo - RTS</fullName>
            </value>
            <value>
                <fullName>Free Trial - RTS</fullName>
            </value>
            <value>
                <fullName>Revenue - RTS</fullName>
            </value>
            <value>
                <fullName>Partial Remorse Refund</fullName>
            </value>
            <value>
                <fullName>Unplanned Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>