force-app/main/default/objects/Opportunity/fields/Industrial_Technical_Win__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Technical_Win__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field for Industrial SEs and SE Managers to select if there is a technical win on this opportunity</description>
    <label>Industrial Technical Win</label>
    <type>Checkbox</type>
</CustomField>