force-app/main/default/objects/Opportunity/fields/Ingenico_Checkout_Id__c.field-meta.xml
<CustomField>
    <fullName>Ingenico_Checkout_Id__c</fullName>
    <description>Opportunity Id from Ingenico</description>
    <label>Ingenico Checkout Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>