force-app/main/default/objects/Opportunity/fields/Initial_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Initial_Payment_Terms__c</fullName>
    <description>Initial Payment Term for custom schedule</description>
    <label>Initial Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>