force-app/main/default/objects/Opportunity/fields/Installer__c.field-meta.xml
<CustomField>
    <fullName>Installer__c</fullName>
    <description>GTMS-6421</description>
    <label>Installer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>