force-app/main/default/objects/Opportunity/fields/Insurance_Partner__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Insurance partner associated with an opportunity.</description>
    <label>Insurance Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Insurance Partner</value>
        </filterItems>
        <filterItems>
            <field>Account.Record_Type__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Partner End-Customer Opportunities</relationshipLabel>
    <relationshipName>Insurance_Partner_Customer_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>