force-app/main/default/objects/Opportunity/fields/Insurance_Partner_Payment_Terms_for_Sch__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Partner_Payment_Terms_for_Sch__c</fullName>
    <formula>IF( ISPICKVAL(Insurance_Partner_Initial_Payment_Terms__c, &quot;Net 5&quot;), &quot;Net 5&quot;,
IF( ISPICKVAL(Insurance_Partner_Initial_Payment_Terms__c, &quot;Net 30&quot;), &quot;Net 30&quot;,
IF( ISPICKVAL(Insurance_Partner_Initial_Payment_Terms__c, &quot;Due in advance&quot;), &quot;Due in advance&quot;,
IF( AND(
OR (
ISPICKVAL(Insurance_Partner_Initial_Payment_Terms__c, &quot;Due in advance&quot;),
ISPICKVAL(Insurance_Partner_Initial_Payment_Terms__c, &quot;Recurring Monthly&quot;),
ISPICKVAL(Insurance_Partner_Initial_Payment_Terms__c, &quot;Due on receipt&quot;)
),
Went_to_Ready_to_Ship_Date__c &gt;= DATETIMEVALUE(&quot;2019-09-10 15:00:00&quot;),
CloseDate &gt;= DATEVALUE(&quot;2019-09-10&quot;),
Payment_Type__c == &quot;Samsara Financed&quot;,
ISBLANK(Payment_Token__c)), &quot;Net 5&quot;,
IF( OR(
ISPICKVAL(Insurance_Partner_Initial_Payment_Terms__c, &quot;Recurring Monthly&quot;),
ISPICKVAL(Insurance_Partner_Initial_Payment_Terms__c, &quot;Due on receipt&quot;),
ISBLANK(TEXT(Insurance_Partner_Initial_Payment_Terms__c))
), &quot;Due in advance&quot;, TEXT( Insurance_Partner_Initial_Payment_Terms__c )
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Partner Payment Terms for Sch</label>
    <type>Text</type>
</CustomField>