force-app/main/default/objects/Opportunity/fields/Internal_Finance__c.field-meta.xml
<CustomField>
    <fullName>Internal_Finance__c</fullName>
    <description>DO NOT USE</description>
    <inlineHelpText>DO NOT USE</inlineHelpText>
    <label>*NO* Internal Finance Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Need More Information</fullName>
            </value>
            <value>
                <fullName>Pending - Require further information</fullName>
                <isActive>false</isActive>
                <label>Pending - Require further information</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>