force-app/main/default/objects/Opportunity/fields/Internal_Finance_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Internal_Finance_Payment_Type__c</fullName>
    <description>The Approved Payment Type. This defaults to the Account’s Approved Payment Type when the Opportunity is created. It can also be updated following an approval request submitted to the Deal Desk team. This field was originally deprecated in 2020, and repurposed in 2023 as part of GTMS-GTMS-16980</description>
    <inlineHelpText>The Approved Payment Type. This defaults to the Account’s Approved Payment Type when the Opportunity is created. To request a change in Payment Type, please submit a request from the CPQ Quote.</inlineHelpText>
    <label>Approved Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Annual</fullName>
            </value>
            <value>
                <fullName>Direct Monthly</fullName>
            </value>
            <value>
                <fullName>Upfront Payments</fullName>
            </value>
            <value>
                <fullName>Direct Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Direct Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>