force-app/main/default/objects/Opportunity/fields/Internal_Financing_Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Internal_Financing_Response_Timestamp__c</fullName>
    <label>Internal Financing Response Timestamp</label>
    <type>DateTime</type>
</CustomField>