force-app/main/default/objects/Opportunity/fields/Internal_RFO_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_RFO_Notes__c</fullName>
    <label>Internal RFO Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>