force-app/main/default/objects/Opportunity/fields/Is_Webstore_Upsell_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Is_Webstore_Upsell_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Webstore Upsell Opportunity</label>
    <type>Checkbox</type>
</CustomField>