force-app/main/default/objects/Opportunity/fields/Last_meaningful_engagement_date__c.field-meta.xml
<CustomField>
    <fullName>Last_meaningful_engagement_date__c</fullName>
    <formula>If(LastModifiedDate &gt;  SBQQ__PrimaryQuote__r.LastModifiedDate, LastModifiedDate, SBQQ__PrimaryQuote__r.LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last meaningful engagement date</label>
    <type>DateTime</type>
</CustomField>