force-app/main/default/objects/Opportunity/fields/Latest_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Close_Date__c</fullName>
    <description>Latest close date without changing the license term</description>
    <formula>CloseDate

+

Floor(




(
(
	( License_End_Date__c - CloseDate 
	)
/30.4
)

-


(ROUND((
	( License_End_Date__c - CloseDate 
	)
/30.4
),0)
					-0.5
)

)

* 30.4

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Latest close date without changing the license term</inlineHelpText>
    <label>Latest Close Date</label>
    <type>Date</type>
</CustomField>