force-app/main/default/objects/Opportunity/fields/Lead_Source_Encoded__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Encoded__c</fullName>
    <description>Date + source number: 1 Outbound, 2 Inbound, 3 Partner, 4 Events, 5 Other</description>
    <label>Lead Source Encoded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>