force-app/main/default/objects/Opportunity/fields/License_Credit_Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>License_Credit_Responsible_Party__c</fullName>
    <description>Workflow stamps email address of person who is responsible for license credit request. This is then used to cc them when the approval is sent out</description>
    <label>Concession Responsible Party Email</label>
    <type>Email</type>
</CustomField>