force-app/main/default/objects/Opportunity/fields/License_Credit_Subreason__c.field-meta.xml
<CustomField>
    <fullName>License_Credit_Subreason__c</fullName>
    <label>Concession Subreason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>License_Term_Credit_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CM - Cannot retrieve video</fullName>
            </value>
            <value>
                <fullName>CM - Accident not recorded</fullName>
            </value>
            <value>
                <fullName>CM - Audio not recorded</fullName>
            </value>
            <value>
                <fullName>CM - Not upgrading to correct firmware</fullName>
            </value>
            <value>
                <fullName>VG - Compliance fine from DOT due to product failure</fullName>
            </value>
            <value>
                <fullName>VG - Time on site page does not update after manual edit</fullName>
            </value>
            <value>
                <fullName>AG - Not responsive to pings</fullName>
            </value>
            <value>
                <fullName>AG - Device or cable failure required replacement</fullName>
            </value>
            <value>
                <fullName>All - Significant technical issue for &gt;1 month</fullName>
            </value>
            <value>
                <fullName>Poor customer support experience</fullName>
            </value>
            <value>
                <fullName>Delayed support ticket resolution - 4+ material technical tickets in 60 days</fullName>
            </value>
            <value>
                <fullName>Sales - Does not support primary use case</fullName>
            </value>
            <value>
                <fullName>Sales - Non-referenceable</fullName>
            </value>
            <value>
                <fullName>Sales - Unable to use products</fullName>
            </value>
            <value>
                <fullName>Ops - Shipping Delays</fullName>
            </value>
            <value>
                <fullName>VG - Compliance fine from DOT due to prduct failure</fullName>
            </value>
            <value>
                <fullName>VG (new) - Samsara paying for VG installations performed by 3rd party installer</fullName>
            </value>
            <value>
                <fullName>VG (replacements) - Samsara paying for VG installations performed by 3rd party installer</fullName>
            </value>
            <value>
                <fullName>CM (new) - Samsara paying for CM installations performed by 3rd party installer</fullName>
            </value>
            <value>
                <fullName>CM (replacement) - Samsara paying for CM installations performed by 3rd party installer</fullName>
            </value>
            <value>
                <fullName>AG (new) - Samsara paying for AG installations performed by 3rd party installer</fullName>
            </value>
            <value>
                <fullName>AG (replacment) - Samsara paying for AG installations performed by 3rd party installer</fullName>
            </value>
            <value>
                <fullName>Multiple product types (new) - Samsara paying for installations performed by 3rd party installer</fullName>
            </value>
            <value>
                <fullName>Multiple product types (replacement) - Samsara paying for installations performed by 3rd party installer</fullName>
            </value>
            <value>
                <fullName>Damaged personal property</fullName>
            </value>
            <value>
                <fullName>Miscellaneous / other</fullName>
            </value>
            <value>
                <fullName>CM - Harsh event not recorded</fullName>
            </value>
            <value>
                <fullName>CM - connectivity issues (i.e., low CM health)</fullName>
            </value>
            <value>
                <fullName>AG - reefer control failure</fullName>
            </value>
            <value>
                <fullName>AG - low battery replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>