force-app/main/default/objects/Opportunity/fields/License_End_Date__c.field-meta.xml
<CustomField>
    <fullName>License_End_Date__c</fullName>
    <description>Date License Ends for Opportunity</description>
    <label>License End Date</label>
    <type>Date</type>
</CustomField>