force-app/main/default/objects/Opportunity/fields/License_End_Date_Notes__c.field-meta.xml
<CustomField>
    <fullName>License_End_Date_Notes__c</fullName>
    <description>Notes on license end dates if unusual or changed post Closed Won</description>
    <label>License End Date Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>