force-app/main/default/objects/Opportunity/fields/License_Months_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>License_Months_to_Credit__c</fullName>
    <inlineHelpText># of free months</inlineHelpText>
    <label>License Credit Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>