force-app/main/default/objects/Opportunity/fields/License_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>License_Sales_Tax__c</fullName>
    <label>License Sales Tax</label>
    <summarizedField>OpportunityLineItem.Sales_Tax_Amount_Vertex__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Code_Copy__c</field>
        <operation>contains</operation>
        <value>LIC-,SVC</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>