force-app/main/default/objects/Opportunity/fields/License_Sales_Tax_CPQ__c.field-meta.xml
<CustomField>
    <fullName>License_Sales_Tax_CPQ__c</fullName>
    <description>License Sales Tax from the primary quote. &lt;Temporary Solution&gt;</description>
    <label>License Sales Tax (CPQ)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>