force-app/main/default/objects/Opportunity/fields/License_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Start_Date__c</fullName>
    <description>Determines the License Term. Automatically set to match the Close Date when Opportunity moves to Closed Won.</description>
    <inlineHelpText>Determines the License Term. Automatically set to match the Close Date when Opportunity moves to Closed Won.</inlineHelpText>
    <label>License Start Date</label>
    <type>Date</type>
</CustomField>