force-app/main/default/objects/Opportunity/fields/License_Term__c.field-meta.xml
<CustomField>
    <fullName>License_Term__c</fullName>
    <defaultValue>36</defaultValue>
    <description>The license term of the opportunity.</description>
    <label>License Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>