force-app/main/default/objects/Opportunity/fields/License_Term_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Term_Approval_Status__c</fullName>
    <label>License Term Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approval required</fullName>
                <isActive>false</isActive>
                <label>Approval required</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>