force-app/main/default/objects/Opportunity/fields/License_Term_CPQ__c.field-meta.xml
<CustomField>
    <fullName>License_Term_CPQ__c</fullName>
    <description>Pulls the License Term from the Primary Quote. &lt;Check with Chad in a couple of months and evaluate if we still need this.&gt;</description>
    <label>License Term (CPQ)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>