force-app/main/default/objects/Opportunity/fields/License_Term_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>License_Term_Credit_Amount__c</fullName>
    <formula>IF(ISPICKVAL(License_Months_to_Credit__c,&quot;Custom&quot;),License_Term_Credit_Amount_Custom__c,VALUE( TEXT(License_Months_to_Credit__c )) *  Returning_Opportunity__r.Total_License_Due__c /Returning_Opportunity__r.License_Term__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>