force-app/main/default/objects/Opportunity/fields/License_Term_Formula__c.field-meta.xml
<CustomField>
    <fullName>License_Term_Formula__c</fullName>
    <description>This field displays the license term on the layout without being editable by anyone. Last update GTMS-978</description>
    <formula>IF(
AND(
NOT(ISBLANK(SBQQ__PrimaryQuote__c)),
NOT(ISBLANK(License_Term_CPQ__c)),
License_Term_CPQ__c &gt; 0
),
License_Term_CPQ__c,
License_Term__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>