force-app/main/default/objects/Opportunity/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <label>List Price</label>
    <summarizedField>OpportunityLineItem.Line_Item_MSRP__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Promotional_Product__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>