force-app/main/default/objects/Opportunity/fields/Max_Approved_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Approved_Discount__c</fullName>
    <defaultValue>0.10</defaultValue>
    <label>Approved Discretionary Discount</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>