force-app/main/default/objects/Opportunity/fields/MBO_Authorized__c.field-meta.xml
<CustomField>
    <fullName>MBO_Authorized__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field to be checked by MM Managers - authorizing the opportunity for MBO eligibility</inlineHelpText>
    <label>MBO Authorized</label>
    <type>Checkbox</type>
</CustomField>