force-app/main/default/objects/Opportunity/fields/MBO_Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>MBO_Authorized_By__c</fullName>
    <label>MBO Authorized By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>