force-app/main/default/objects/Opportunity/fields/MBO_Authorized_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MBO_Authorized_Date_Time__c</fullName>
    <label>MBO Authorized Date/Time</label>
    <type>DateTime</type>
</CustomField>