force-app/main/default/objects/Opportunity/fields/Monthly_Credit_Remaining_on_Account__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Credit_Remaining_on_Account__c</fullName>
    <description>Used to determine whether this account will require a credit limit increase for this opp to close.</description>
    <formula>Account.Credit_Limit__c -  Account.Current_Monthly_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This formula calculates the Account&apos;s monthly credit remaining by subtracting the Account&apos;s current monthly payments from its current max monthly credit limit.</inlineHelpText>
    <label>Monthly Credit Remaining on Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>