force-app/main/default/objects/Opportunity/fields/Monthly_Deal_or_Monthly_Return__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Deal_or_Monthly_Return__c</fullName>
    <formula>TEXT( Selected_Payment_Type__c ) = &quot;Direct Monthly&quot; || Direct_Monthly__c ||  TEXT(Returning_Opportunity__r.Selected_Payment_Type__c) = &quot;Direct Monthly&quot; || Returning_Opportunity__r.Direct_Monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Deal or Monthly Return?</label>
    <type>Checkbox</type>
</CustomField>