force-app/main/default/objects/Opportunity/fields/Multi_Line_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Multi_Line_Shipping__c</fullName>
    <description>if unique shipping address is more than 1, then true</description>
    <formula>IF( Unique_Shipping_Addresses__c &gt; 1, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>if unique shipping address is more than 1, then true</inlineHelpText>
    <label>Multi Line Shipping</label>
    <type>Checkbox</type>
</CustomField>