force-app/main/default/objects/Opportunity/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <label>BANT Need</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Telematics</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Fuel Management</fullName>
            </value>
            <value>
                <fullName>Dispatch &amp; Routing</fullName>
            </value>
            <value>
                <fullName>Driver Workflows</fullName>
            </value>
            <value>
                <fullName>API &amp; Integrations</fullName>
            </value>
            <value>
                <fullName>Utilization</fullName>
            </value>
            <value>
                <fullName>Cold Chain Management</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Asset Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>