force-app/main/default/objects/Opportunity/fields/netsuite_conn__Bill_To_Tier__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Bill_To_Tier__c</fullName>
    <label>Bill To Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End User</fullName>
                <default>true</default>
                <label>End User</label>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>