force-app/main/default/objects/Opportunity/fields/netsuite_conn__End_User__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End User)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>