force-app/main/default/objects/Opportunity/fields/netsuite_conn__NetSuite_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__NetSuite_Sales_Order_Number__c</fullName>
    <label>NetSuite Sales Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>