force-app/main/default/objects/Opportunity/fields/netsuite_conn__Order_Type__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract - New</fullName>
            </value>
            <value>
                <fullName>Contract - Upsell</fullName>
            </value>
            <value>
                <fullName>Contract - Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>